--- a/components/CartModal/cart-modal.module.scss
+++ b/components/CartModal/cart-modal.module.scss
@@ -39,7 +39,7 @@
   font-weight: 700;
   font-size: 16px;
   color: #5E697B;
-  border-bottom: 1px solid #e8e8e8;
+  //border-bottom: 1px solid #e8e8e8;
 }
 .cardList {
   height: 100%;
@@ -101,8 +101,14 @@
 .name,
 .price,
 .colorSize {
-  font-weight: 600;
+  font-family: Manrope;
   font-size: 15px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 20px;
+  letter-spacing: 0em;
+  color: #2b2b2b;
+
 }
 .colorSize {
   display: flex;
@@ -136,7 +142,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-weight: 500;
+  font-weight: 600;
   font-family: Rubik;
   font-size: 15px;
   font-style: normal;
