--- a/components/Loader/loader.module.scss
+++ b/components/Loader/loader.module.scss
@@ -16,7 +16,7 @@
   width: 15px;
   height: 15px;
   border-radius: 50%;
-  background: #ff5e1a;
+  background: #6C98B1;
   animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
 .ldsEllipsis div:nth-child(1) {
