--- a/components/BlockWrapper/BlockWrapper.module.scss
+++ b/components/BlockWrapper/BlockWrapper.module.scss
@@ -1,11 +1,14 @@
 .wrapper {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 30px;
 }
 
 .banner {
-  width: 50%;
+  width: 49%;
   height: 320px;
+  //background-size: cover;
   //background-position: center center;
   //margin: 30px 0;
   margin-bottom: 30px;
