--- a/components/CartMain/cart-main.module.scss
+++ b/components/CartMain/cart-main.module.scss
@@ -29,7 +29,7 @@
 .wrapper {
   display: flex;
   justify-content: space-between;
-  margin: 48px 0;
+  margin: 40px 0;
 }
 
 .left {
@@ -167,6 +167,7 @@
 .right {
   //height: 367px;
   width: 350px;
+  height: 100%;
   left: 925px;
   top: 293px;
   border-radius: 24px;
