--- a/components/CategoriesBar/categories-bar.module.scss
+++ b/components/CategoriesBar/categories-bar.module.scss
@@ -4,7 +4,7 @@
   left: 50%;
   right: 50%;
   //top: 0;
-  z-index: 1;
+  z-index: 2;
   margin-left: -50vw;
   margin-right: -50vw;
   background: #6C98B1;
@@ -21,16 +21,17 @@
   margin: 0 auto;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   font-weight: 500;
   font-size: 14px;
 }
 
-.pages{
+.pages {
   font-size: 18px;
   font-weight: 800;
 }
-.catalog{
+
+.catalog {
   font-size: 18px;
   font-weight: 800;
 }
@@ -39,15 +40,23 @@
   display: flex;
   align-items: center;
   height: 100%;
+  text-align: center !important;
 }
 
 .hover {
-  color: #FF5859;
+  color: #E4D6B9;
+  font-family: Rubik;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px;
+  letter-spacing: 0em;
+  //color: #fff;
 }
 
 .joki {
   position: absolute;
-  top: 47px;
+  top: 62px;
   z-index: 20;
   width: 100vw;
   left: 50%;
@@ -65,9 +74,10 @@
   display: flex;
   flex-wrap: wrap;
   font-weight: 500;
-  font-size: 15px;
+  font-size: 14px;
   color: #2b2b2b;
   padding: 25px 15px;
+  text-transform: capitalize;
 
   a {
     display: flex;
@@ -75,25 +85,35 @@
     height: 40px;
     padding: 0 15px;
     font-weight: bold;
+    text-align: left;
+    color: #6C98B1;
 
     &:hover {
-      color: #FF5859;
-      border: 1px solid #FF5859;
+      color: #6C98B1;
+      border: 1px solid #6C98B1;
     }
   }
 }
 
 .jokiLink {
   font-weight: normal !important;
+  color: #052537 !important;
+  font-size: 14px;
+  font-style: normal;
+  line-height: 20px;
+  letter-spacing: 0em;
+  text-align: left;
 }
 
 .jokiMoki {
   width: 25%;
+
+
 }
 
 .brands {
   &:hover {
-    color: #ff5e1a;
+    color: #6C98B1;
   }
 }
 
