--- a/components/ProductCard/product-card.module.scss
+++ b/components/ProductCard/product-card.module.scss
@@ -161,31 +161,63 @@
   color: #052537;
 }
 
-.addToWishlist {
-  padding: 15px;
-  background: #fff;
-  border: 1px solid #FFA035;
+.twoButtons {
+  display: flex;
+  justify-content: space-between;
 
-  &.active {
-    svg {
-      fill: #FFA035;
+  .addToWishlist {
+    width: 50px;
+    height: 50px;
+    border: 1px solid #5E697B;
+    border-radius: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-      path {
-        stroke: #FFA035;
+
+    &.active {
+      svg {
+        fill: #FFA035;
+
+        path {
+          stroke: #FFA035;
+        }
       }
     }
   }
 }
 
+
 .buy {
   color: #052537;
   background: #ffffff;
   border: 1px solid #052537;
+  max-width: 280px;
+  height: 50px;
 }
+.telegram {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
+  height: 50px;
+  border-radius: 16px;
+  background-color: #6C98B1;
+  font-family: Rubik;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 19px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: #fff;
 
+}
 .delivery {
   padding: 30px;
-  background: rgba(255, 94, 26, 0.05);
+  background: rgba(108, 152, 177, 0.12);
+  border-radius: 24px;
   margin: 40px 0 30px;
 
   div {
@@ -193,7 +225,13 @@
       display: flex;
       align-items: center;
       font-weight: 600;
+      font-family: Rubik;
       font-size: 16px;
+      font-style: normal;
+      line-height: 19px;
+      letter-spacing: 0em;
+      text-align: left;
+      color: #5E697B;
       margin-bottom: 10px;
 
       img {
@@ -202,25 +240,47 @@
     }
 
     &:last-of-type {
+      font-family: Rubik;
       font-size: 15px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 22px;
+      letter-spacing: 0em;
+      text-align: left;
+      color: #5E697B;
     }
   }
 }
 
 .description {
-  border-top: 1px solid #e8e8e8;
-  border-bottom: 1px solid #e8e8e8;
+  //border-top: 1px solid #e8e8e8;
+  //border-bottom: 1px solid #e8e8e8;
   padding: 20px 0;
+  margin-left: 150px;
+  width: 570px;
 
   div {
+    color: #5E697B;
     &:first-of-type {
-      font-weight: 600;
+      font-family: Rubik;
       font-size: 16px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 20px;
+      letter-spacing: 0em;
+      text-align: left;
       margin-bottom: 20px;
     }
 
     &:last-of-type {
+      font-family: Rubik;
       font-size: 15px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 20px;
+      letter-spacing: 0em;
+      text-align: left;
+
     }
   }
 }
@@ -240,6 +300,10 @@
     margin-bottom: 30px;
   }
   .right {
+    width: 100%;
+  }
+  .description {
+    margin-left: 0;
     width: 100%;
   }
 }
