--- a/components/TopBar/top-bar.module.scss
+++ b/components/TopBar/top-bar.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
   background: #E4D6B9;
-  font-weight: 500;
+  //font-weight: 500;
   font-size: 12px;
   color: #5E697B;
 }
@@ -25,6 +25,7 @@
     letter-spacing: 0em;
     text-align: left;
     color: #5E697B;
+    cursor: pointer;
   }
 
   a {
