--- a/components/WishlistMain/wishlist-main.module.scss
+++ b/components/WishlistMain/wishlist-main.module.scss
@@ -4,6 +4,9 @@
 .cardlist {
   .card {
     margin-bottom: 48px;
+    background-color: #fff;
+    border-radius: 32px;
+
     .top {
       position: relative;
       margin-bottom: 20px;
@@ -18,14 +21,15 @@
         text-align: center;
         padding: 16px 0;
         text-decoration: none;
-        background: #FFA035;
+        background: #6C98B1;
         &:hover {
-          background: #FFA035;
+          background: #6C98B1;
         }
       }
       img {
         width: 100%;
         height: 350px;
+        border-radius: 32px;
       }
       .remove {
         position: absolute;
@@ -61,7 +65,10 @@
     }
   }
 }
-
+.details{
+  height: 100px;
+  margin: 0 20px;
+}
 .emptyCart {
   width: 100%;
   margin: 50px auto;
