mobile menu categories

--- a/components/CartModal/cart-modal.module.scss
+++ b/components/CartModal/cart-modal.module.scss
@@ -20,7 +20,7 @@
   top: 70px;
   right: 0;
   width: 380px;
-  border: 1px solid #fff;
+  border: 1px solid #5E697B;
   background: white;
   padding: 25px;
   margin-top: -1px;
