--- a/components/Accordion/accordion.module.scss
+++ b/components/Accordion/accordion.module.scss
@@ -30,7 +30,14 @@
   margin-left: 10px;
 }
 .link {
-  font-weight: 300;
+  font-family: Rubik;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #5E697B;
   display: flex;
   align-items: center;
   height: 40px;
