--- a/components/AboutMain/index.module.scss
+++ b/components/AboutMain/index.module.scss
@@ -23,10 +23,10 @@
   padding: 0 15px;
   border: 1px solid transparent;
   &.active {
-    color: #ff5e1a;
+    color: #6C98B1;
   }
   &:hover {
-    border: 1px solid #ff5e1a;
+    border: 1px solid #6C98B1;
   }
 }
 .right {
