--- a/components/ProductsListItem/products-list-item.module.scss
+++ b/components/ProductsListItem/products-list-item.module.scss
@@ -33,6 +33,21 @@
   border: 0;
 }
 
+.addToCart {
+  position: absolute;
+  bottom: 30px;
+  right: 20px;
+  button {
+    width: 40px;
+    height: 40px;
+    background-color: #E4D6B9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 12px;
+  }
+}
+
 .productImg {
   width: 100%;
   height: 350px;
@@ -53,7 +68,8 @@
   //justify-content: space-between;
   height: 120px;
   padding: 0 20px;
-  .productName{
+
+  .productName {
     font-family: Rubik;
     font-size: 14px;
     font-style: normal;
@@ -63,7 +79,9 @@
     text-align: left;
     color: #5E697B;
     margin-bottom: 15px;
-
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 
   div {
@@ -146,7 +164,7 @@
   .details {
     height: 140px;
   }
-  .card{
+  .card {
     margin: 0 5px;
   }
   .salePrice,
