--- a/components/TopBar/top-bar.module.scss
+++ b/components/TopBar/top-bar.module.scss
@@ -13,6 +13,7 @@
   display: flex;
   align-items: center;
   position: relative;
+  justify-content: space-between;
   div,
   a {
     display: flex;
@@ -28,10 +29,6 @@
     cursor: pointer;
   }
 
-  a {
-    position: absolute;
-    right: 0;
-  }
   img {
     margin-right: 10px;
   }
@@ -40,8 +37,11 @@
 @media screen and (max-width: 1100px) {
   .inner {
     padding: 0 15px;
-    a {
-      display: none;
+    .rightSide{
+      a {
+        display: none;
+      }
     }
+
   }
 }
