--- a/components/BrandList/brand-list.module.scss
+++ b/components/BrandList/brand-list.module.scss
@@ -14,7 +14,7 @@
   position: sticky;
   top: 70px;
   z-index: 999;
-  background-color: #E5E5E5;
+  background-color: #f3f8fb;
 
   div {
     cursor: pointer;
