--- a/components/Brands/Brands.module.scss
+++ b/components/Brands/Brands.module.scss
@@ -17,6 +17,10 @@
       background-color: #fff;
       border-radius: 32px;
       //margin-right: 30px;
+      img{
+        width: 236px;
+        height: 236px;
+      }
 
     }
   }
@@ -36,6 +40,11 @@
       height: 160px;
       background-color: #fff;
       border-radius: 32px;
+      img{
+        width: 112px;
+        height: 112px;
+
+      }
       //margin-left: 30px;
     }
   }
@@ -59,6 +68,11 @@
       height: 160px;
       background-color: #fff;
       border-radius: 32px;
+      img{
+        width: 112px;
+        height: 112px;
+
+      }
     }
   }
 
@@ -71,6 +85,10 @@
       padding: 57px;
       background-color: #fff;
       border-radius: 32px;
+      img{
+        width: 236px;
+        height: 236px;
+      }
     }
 
   }
