--- a/components/ShopPrice/shop-price.module.scss
+++ b/components/ShopPrice/shop-price.module.scss
@@ -1,34 +1,38 @@
-.priceTablets{
-  display: flex;
-  justify-content: space-between;
-  font-family: Manrope;
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 20px;
-  letter-spacing: 0em;
-  text-align: left;
-  color: #2b2b2b;
-
-  div{
-    width: 120px;
-    height: 50px;
+.wrapper {
+  margin-bottom: 30px;
+  .priceTablets {
     display: flex;
-    padding: 0 16px;
-    align-items: center;
-    border: 1px solid #D9E1E5;
-    border-radius: 20px;
-    background-color: #fff;
-  }
-}
-.priceTitle{
-  font-family: Rubik;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 19px;
-  letter-spacing: 0em;
-  text-align: left;
-  color: #5E697B;
+    justify-content: space-between;
+    font-family: Manrope;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 20px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #2b2b2b;
 
+    div {
+      width: 120px;
+      height: 50px;
+      display: flex;
+      padding: 0 16px;
+      align-items: center;
+      border: 1px solid #D9E1E5;
+      border-radius: 20px;
+      background-color: #fff;
+    }
+  }
+
+  .priceTitle {
+    font-family: Rubik;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 19px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #5E697B;
+
+  }
 }
