--- a/components/FilterGender/filter-gender.module.scss
+++ b/components/FilterGender/filter-gender.module.scss
@@ -13,7 +13,7 @@
     padding: 15px;
     border-radius: 16px;
     background-color: #fff;
-    height: 260px;
+    height: auto;
     overflow-y: auto;
     div {
       display: flex;
