--- a/components/FilterSteps/filter-steps.module.scss
+++ b/components/FilterSteps/filter-steps.module.scss
@@ -15,7 +15,7 @@
     background-color: #fff;
     font-size: 15px;
     padding: 15px;
-    height: 260px;
+    height: auto;
     overflow-y: auto;
 
     div {
