--- a/components/FilterCategory/filter-category.module.scss
+++ b/components/FilterCategory/filter-category.module.scss
@@ -5,6 +5,7 @@
   color: #5E697B;
   padding-bottom: 15px;
   //border-bottom: 1px solid #5E697B;
+
 }
 .accordion {
   font-weight: 500;
@@ -12,5 +13,11 @@
   background-color: #fff;
   font-size: 15px;
   padding: 15px;
-  margin-bottom: 30px;
+  //margin-bottom: 30px;
+}
+
+@media(max-width: 1100px) {
+  .title{
+    padding-bottom: 0;
+  }
 }
