--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope&family=Rubik&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import '~slick-carousel/slick/slick.css';
+@import 'lightgallery.js/dist/css/lightgallery.css';
 @import '~slick-carousel/slick/slick-theme.css';
 @import '~react-image-gallery/styles/css/image-gallery.css';
 
@@ -158,6 +159,10 @@ a:focus {
 
 .image-gallery-image img {
     border-radius: 16px !important;
+}
+
+.react_lightgallery_item img {
+    width: 100%;
 }
 
 @media screen and (max-width: 1100px) {
