--- a/components/AuthorizationPage/authorization.module.scss
+++ b/components/AuthorizationPage/authorization.module.scss
@@ -76,6 +76,18 @@
     background: #E3E7E7;
   }
 }
+.activeButton {
+  width: 100%;
+  padding: 16px 0;
+  border: 0;
+  background: #E4D6B9 !important;
+  border-radius: 16px !important;
+  color: #052537 !important;
+  font-weight: 600;
+  font-size: 16px;
+  margin-bottom: 16px;
+  margin-top: 12px;
+}
 
 .button1 {
   width: 100%;
