--- a/components/FiltersBar/filters-bar.module.scss
+++ b/components/FiltersBar/filters-bar.module.scss
@@ -32,7 +32,7 @@
   display: flex;
   flex-direction: column;
   position: fixed;
-  //top: 100px;
+  top: 160px;
   left: 0;
   width: 100%;
   height: 100%;
